fixed content overflowing bug

--- a/css/index.css
+++ b/css/index.css
@@ -100,8 +100,7 @@ h1,h2:not(.header h1){
 
 .current-campaigns{
 	width: 70%;
-	/*height: auto;*/
-	height: 100vh;
+	height: auto;
 	min-height: 70vh;
 	margin-right: auto;
 	margin-left: auto;
@@ -132,8 +131,8 @@ h1,h2:not(.header h1){
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
-	/*height: auto;*/
-	height: 100vh;
+	height: auto;
+	/*height: 100vh;*/
 }
 
 .upcoming-text{
